tests/ui/inference/infer-const-in-param-env.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `[(); _]`
  --> $DIR/infer-const-in-param-env.rs:6:1
   |
LL | impl<const N: u8> Trait for [(); N] {}
   | ----------------------------------- first implementation here
LL | impl<const N: i8> Trait for [(); N] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[(); _]`

error[E0308]: mismatched types
  --> $DIR/infer-const-in-param-env.rs:5:34
   |
LL | impl<const N: u8> Trait for [(); N] {}
   |                                  ^ expected `usize`, found `u8`

error[E0308]: mismatched types
  --> $DIR/infer-const-in-param-env.rs:6:34
   |
LL | impl<const N: i8> Trait for [(); N] {}
   |                                  ^ expected `usize`, found `i8`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0119, E0308.
For more information about an error, try `rustc --explain E0119`.
